--- a/WYNews/app/src/main/AndroidManifest.xml
+++ b/WYNews/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     package="com.example.dllo.wynews">
 
     <application
+        android:name=".ui.app.MyApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.WelcomeActivity"/>
     </application>
 
 </manifest>
