--- a/WYNews/app/src/main/AndroidManifest.xml
+++ b/WYNews/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ui.activity.WelcomeActivity"/>
         <activity android:name=".ui.activity.SettingsActivity"/>
+        <activity android:name=".ui.activity.LoginActivity"/>
     </application>
 
 </manifest>
