--- a/WYNews/app/build.gradle
+++ b/WYNews/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
