--- a/WYNews/app/build.gradle
+++ b/WYNews/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.0.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:cardview-v7:23.0.1'
 }
